# prediction-markets

./: .env.example  .gitignore  LICENSE  PARTICIPANTS.md  PLATFORM-COMPARISON.md  POLYMARKET.md  README.md  bunfig.toml  docker-compose.yml
docs/: CONTRIBUTING.md  PARTICIPANTS.md
secrets/: .gitkeep
services/kalshi-ts/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/kalshi-ts/src/: config.ts  index.ts  kalshi.client.ts  server.ts
services/polymarket/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/polymarket-ts/: Dockerfile  package.json  tsconfig.json
services/polymarket-ts/src/: index.ts
services/polymarket/src/: index.ts  polymarket.client.ts  server.ts
services/python/: Dockerfile  pyproject.toml
services/python/notebooks/: analysis.ipynb
services/python/src/: analysis.py  client.py  demo.py  main.py  polymarket_demo.py
services/typescript/: Dockerfile  package.json  tsconfig.json
services/typescript/src/: kalshi.client.ts
