[project]
name = "kalshi-python-client"
version = "1.0.0"
description = "Python client for Kalshi data analysis"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "pydantic>=2.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
]
